# Large-Scale-Topology-Optimization

./: .gitignore  Makefile  Makefile.inc  README.md  betacalinput.f  caltop_gm  closefile.f  date.pl  linstatic.c  main.c  main.h  meson.build  readinput.c  rho.c  strcmp1.c  strcmp2.c  strcpy1.c
CalGeo/: CalGeo.py  calGeo.py
CalPy/: CompSens.py
CalTop/: Makefile  Makefile.inc  date.pl
CalTop/PARDISO_MAKE/: Makefile
CalTop/include/: CalculiX.h  ccx_material.h  envmkl.h  filterDensity_mt.h  filterVector_mt.h  pardiso.h
CalTop/src/: adjointRHS_nodes_2_eq.f  allocation.f  arpack.c  arpackbu.c  arpackcs.c  assembleDensityFilter_bin_mt.c  build_filter.f  calFilt.c  ccx_2.15.c  ccx_2.15.c.old  ccx_material.c  complexfreq.c  densityfilter.c  densityfilterFast.c  densityfilterFast_mt.c  dyna.c  electromagnetics.c  expand.c  expand_filter.c  filterDensity_bin_mt.c  filterDensity_mt.c  filterDensity_txt_mt.c  filterPassiveElements.c  filterSens_bin_mt_s.c  filterSens_bin_mt_s_group.c  filterSens_mt.c  filterSens_mt_s.c  filterVector.c  filterVector_mt.c  filter_matrix.c  frd.c  frd.c.old  linstatic.c  mafillsm_filter2.f  mafillsmmain_Vectorfilter.c  mafillsmmain_filter2.c  mafillsmmain_filter_st.c  makeDistanceMatrix.c  massCG.c  nonlingeo.c  (+21 more)
HelperFiles/: DistributeLoad.py  LineLoad.py  PlotSens.py  ReadIPOPT.py  Readme.md  SineLoad.py  compute_filter_radius.py
New/: Makefile  Makefile.inc  allocation.f  cascade.c  dVoldRhoPhys.c  elementPassiveTreatment.c  elementcpuload.c  elementcpuload_density.c  filterVector.c  getSubstring2.c  getSystemCPUs.c  insert.c  insertfreq.c  mafillsmmain_Vectorfilter.c  main.c  main.h  mastruct.c  mastructcs.c  readinput.c  sensitivity.c  strcmp1.c  strcmp2.c  u_calloc.c  u_free.c  u_realloc.c  writeheading.c
New/buffer/: main.c
OLD/CALTOP_mkleqnnz_cluster/: Makefile  Makefile.inc  Nfix1.nam  Nsurface.nam  RAE2822.inp  README.md  beam.frd  ccx_2.15.c  deform.msh  frd.c  mafillsmmain.c  mesh.nam  resultsprint.f  spooles.c  tecplot.f  tecplot_vtu.f  u_calloc.c
OLD/CalGeo/: CalGeo.py
Profile/: .~lock.Profiling.xlsx#  Profiling.xlsx
TestCases/: .~lock.CalTop_TestCases.xlsx#
TestCases/CB/: CB.inp  LineLoad.py  RunOptim.py
TestCases/MBB/: MBB.inp  RunOptim.py
TestCases/OneCell/: OneCell.inp  SanityCheck.py  TestFD  TwoCells.inp  resultslog
TestCases/RAE2822/: RAE2822OPT.inp  fort.8  (+1 more)
(+54 files in other folders)
